--- a/stylesheets/all.scss
+++ b/stylesheets/all.scss
@@ -1,4 +1,4 @@
-@import "node_modules/lbh-frontend/lbh/all";
+@import 'node_modules/lbh-frontend/lbh/all';
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&amp;display=swap');
 
 $screen-sm-min: 576px;
@@ -132,7 +132,8 @@ body {
   margin: 0;
 }
 
-.govuk-fieldset__legend:not(.govuk-fieldset__legend--m):not(.govuk-fieldset__legend--l):not(.govuk-fieldset__legend--xl) + .govuk-hint {
+.govuk-fieldset__legend:not(.govuk-fieldset__legend--m):not(.govuk-fieldset__legend--l):not(.govuk-fieldset__legend--xl)
+  + .govuk-hint {
   margin-bottom: 0;
 }
 
