--- a/stylesheets/all.scss
+++ b/stylesheets/all.scss
@@ -164,3 +164,17 @@ body {
 .govuk-summary-list__value:last-child {
   width: 50%;
 }
+
+.text-align-right {
+  text-align: right;
+}
+
+.btn-smaller {
+  padding: 0.4rem 0.9rem 0.3rem;
+  width: 160px;
+  font-size: 1rem;
+}
+
+.active {
+  font-weight: 700;
+}
