adjusted css on summary to match hackney summary

--- a/components/Summary/Summary.module.scss
+++ b/components/Summary/Summary.module.scss
@@ -1,6 +1,8 @@
 .sectionTitle {
   display: flex;
   align-items: center;
+  width: 100%;
+  justify-content: space-between;
   a {
     margin-left: 1rem;
   }
