--- a/stylesheets/all.scss
+++ b/stylesheets/all.scss
@@ -5,14 +5,24 @@ $screen-sm-min: 576px;
 
 * {
   font-family: Open Sans, Arial, sans-serif !important;
+  box-sizing: border-box;
 }
 
 * + * {
   margin-top: 0px;
 }
 
+html,
 body {
-  margin-top: 0;
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 [role='button'] {
